# AI-Browser-Automation

./: .gitignore  README.md  requirements.txt
assistant/: .env  pyproject.toml  speech_handler.py
assistant/assistant/: main.py  speech_handler.py
assistant/assistant/agents/: browser_agent.py  conversation_agent.py
assistant/assistant/tools/: browser_tools.py
assistant/assistant/utils/: browser_actions.py  prompt.py
assistantlanding/: package-lock.json  package.json
assistantlanding/app/: page.tsx
assistantlanding/components/: AnimatedIcons.tsx  AssistantSection.tsx  CTASection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  SmoothScroll.tsx  WaveAnimation.tsx
auto/: log.txt  main.py  speech_handler.py
